--- a/index.html
+++ b/index.html
@@ -6,8 +6,18 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Geohazards Risk Mapping Initiative</title>
 
+      <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZRES4EZMMR"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-ZRES4EZMMR');
+    </script>
+
+    <title>Geohazards Risk Mapping Initiative</title>
     <script src="https://unpkg.com/scrollreveal"></script>
   </head>
   <body>
